Playing around with layouting

--- a/ngrxTest2/angular.json
+++ b/ngrxTest2/angular.json
@@ -25,6 +25,11 @@
             "styles": [
               "src/assets/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/styling"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
